error_utf8.txt
PAGE LOG: %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold
PAGE LOG: You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/
PAGE ERROR: SyntaxError /http:/localhost:8080/openclaw/scene.jsx: Identifier 'drawBigPlant' has already been declared. (921:9)

  919 |
  920 | // Big monstera floor plant ù stands on floor, tall, swaying leaves
> 921 | function drawBigPlant(ctx, x, y, P, now){
      |          ^
  922 |   const R = (dx, dy, w, h, c) => { ctx.fillStyle = c; ctx.fillRect((x+dx)|0, (y+dy)|0, w|0, h|0); };
  923 |   const sway = Math.sin(now / 1800) * 1;
  924 |   // large terracotta pot SyntaxError: /http:/localhost:8080/openclaw/scene.jsx: Identifier 'drawBigPlant' has already been declared. (921:9)

  919 |
  920 | // Big monstera floor plant ù stands on floor, tall, swaying leaves
> 921 | function drawBigPlant(ctx, x, y, P, now){
      |          ^
  922 |   const R = (dx, dy, w, h, c) => { ctx.fillStyle = c; ctx.fillRect((x+dx)|0, (y+dy)|0, w|0, h|0); };
  923 |   const sway = Math.sin(now / 1800) * 1;
  924 |   // large terracotta pot
    at e (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:260002)
    at r.raise (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:312098)
    at t.checkRedeclarationInScope (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:270664)
    at t.declareName (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:270028)
    at r.declareName (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:273002)
    at r.registerFunctionStatementId (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:527042)
    at r.parseFunction (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:526655)
    at r.parseFunctionStatement (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:519029)
    at r.parseStatementContent (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:512264)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:511686)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:379262)
    at r.parseModuleItem (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:511181)
    at r.parseBlockOrModuleBlockBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523506)
    at r.parseBlockBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523339)
    at r.parseProgram (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:508590)
    at r.parseTopLevel (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:507296)
    at r.parseTopLevel (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:397777)
    at r.parse (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:550298)
    at aR (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:550496)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1117838
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1068)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:826)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:826)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:826)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at iF (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:945723)
    at sync (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:943814)
    at stopHiding - secret - don't use this - v1 (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1069523)
    at SV (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1126275)
    at FEe (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3132179)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3127986
    at SEe (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3128384)
    at n (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3128645)
    at a (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3129038)
    at d.src.i.onreadystatechange (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3129295)
